--- a/etc/_팀교육/프로그래밍 교육/예제/test.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/예제/test.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "1"
+    "#################################Module For Functional Programing#############################################\n",
+    "from functools import reduce\n",
+    "curry = lambda f: lambda a,*args: f(a, *args) if (len(args)) else lambda *args: f(a, *args)\n",
+    "\n",
+    "filter = curry(filter)\n",
+    "map = curry(map)\n",
+    "reduce = curry(reduce)\n",
+    "\n",
+    "go = lambda *args: reduce(lambda a,f: f(a), args) ## 함수도 축약 가능 ##\n",
+    "##############################################################################################################"
    ]
   },
   {
@@ -358,88 +356,6 @@
    ],
    "source": [
     "math.factorial(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__doc__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'acos',\n",
-       " 'acosh',\n",
-       " 'asin',\n",
-       " 'asinh',\n",
-       " 'atan',\n",
-       " 'atan2',\n",
-       " 'atanh',\n",
-       " 'ceil',\n",
-       " 'comb',\n",
-       " 'copysign',\n",
-       " 'cos',\n",
-       " 'cosh',\n",
-       " 'degrees',\n",
-       " 'dist',\n",
-       " 'e',\n",
-       " 'erf',\n",
-       " 'erfc',\n",
-       " 'exp',\n",
-       " 'expm1',\n",
-       " 'fabs',\n",
-       " 'factorial',\n",
-       " 'floor',\n",
-       " 'fmod',\n",
-       " 'frexp',\n",
-       " 'fsum',\n",
-       " 'gamma',\n",
-       " 'gcd',\n",
-       " 'hypot',\n",
-       " 'inf',\n",
-       " 'isclose',\n",
-       " 'isfinite',\n",
-       " 'isinf',\n",
-       " 'isnan',\n",
-       " 'isqrt',\n",
-       " 'lcm',\n",
-       " 'ldexp',\n",
-       " 'lgamma',\n",
-       " 'log',\n",
-       " 'log10',\n",
-       " 'log1p',\n",
-       " 'log2',\n",
-       " 'modf',\n",
-       " 'nan',\n",
-       " 'nextafter',\n",
-       " 'perm',\n",
-       " 'pi',\n",
-       " 'pow',\n",
-       " 'prod',\n",
-       " 'radians',\n",
-       " 'remainder',\n",
-       " 'sin',\n",
-       " 'sinh',\n",
-       " 'sqrt',\n",
-       " 'tan',\n",
-       " 'tanh',\n",
-       " 'tau',\n",
-       " 'trunc',\n",
-       " 'ulp']"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(math)"
    ]
   },
   {
@@ -786,6 +702,186 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Boyeon', 'age': 29, 'location': 'Seoul'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = dict({'name': 'Boyeon', 'age': 29, 'location': 'Seoul'})\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Boyeon', 'age': 29, 'location': 'Seoul'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = dict([['name', 'Boyeon'], ['age', 29], ['location', 'Seoul']])\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Boyeon', 'age': 29, 'location': None}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = dict([['name', 'Boyeon'], ['age', 29], ['location', None]])\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[['항목', '▶ 모델 Parameter'],\n",
+       "  ['산출수식 약자', None],\n",
+       "  ['수동 입력값', None],\n",
+       "  ['엑셀 적용여부', None],\n",
+       "  ['Parameter Type', None],\n",
+       "  ['Parameter', None],\n",
+       "  ['단위', None],\n",
+       "  ['비고', None],\n",
+       "  ['Description', None]],\n",
+       " [['항목', '면적'],\n",
+       "  ['산출수식 약자', 'A'],\n",
+       "  ['수동 입력값', None],\n",
+       "  ['엑셀 적용여부', None],\n",
+       "  ['Parameter Type', 'BP'],\n",
+       "  ['Parameter', 'Area'],\n",
+       "  ['단위', 'm2'],\n",
+       "  ['비고', 'Revit자동산출'],\n",
+       "  ['Description', None]],\n",
+       " [['항목', '둘레'],\n",
+       "  ['산출수식 약자', 'P'],\n",
+       "  ['수동 입력값', None],\n",
+       "  ['엑셀 적용여부', None],\n",
+       "  ['Parameter Type', 'BP'],\n",
+       "  ['Parameter', 'Perimeter'],\n",
+       "  ['단위', 'mm'],\n",
+       "  ['비고', 'Revit자동산출'],\n",
+       "  ['Description', None]],\n",
+       " [['항목', 'Ceiling Height'],\n",
+       "  ['산출수식 약자', 'CH'],\n",
+       "  ['수동 입력값', None],\n",
+       "  ['엑셀 적용여부', None],\n",
+       "  ['Parameter Type', 'SP'],\n",
+       "  ['Parameter', 'H_Room H or CH'],\n",
+       "  ['단위', 'mm'],\n",
+       "  ['비고', '*Room Schedule에서 H or CH 수동 입력'],\n",
+       "  ['Description', None]],\n",
+       " [['항목', '▶ 수동 입력 값 (엑셀 상에서 입력)'],\n",
+       "  ['산출수식 약자', None],\n",
+       "  ['수동 입력값', None],\n",
+       "  ['엑셀 적용여부', None],\n",
+       "  ['Parameter Type', None],\n",
+       "  ['Parameter', None],\n",
+       "  ['단위', None],\n",
+       "  ['비고', None],\n",
+       "  ['Description', None]],\n",
+       " [['항목', '주 마감재 높이'],\n",
+       "  ['산출수식 약자', 'MH'],\n",
+       "  ['수동 입력값', 2.1],\n",
+       "  ['엑셀 적용여부', 'O'],\n",
+       "  ['Parameter Type', None],\n",
+       "  ['Parameter', None],\n",
+       "  ['단위', None],\n",
+       "  ['비고', None],\n",
+       "  ['Description', None]],\n",
+       " [['항목', 'Raised Floor 높이'],\n",
+       "  ['산출수식 약자', 'RH'],\n",
+       "  ['수동 입력값', 1.0],\n",
+       "  ['엑셀 적용여부', 'O'],\n",
+       "  ['Parameter Type', None],\n",
+       "  ['Parameter', None],\n",
+       "  ['단위', None],\n",
+       "  ['비고', None],\n",
+       "  ['Description', None]]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [[[\"항목\",\"▶ 모델 Parameter\"],[\"산출수식 약자\",None],[\"수동 입력값\",None],[\"엑셀 적용여부\",None],[\"Parameter Type\",None],[\"Parameter\",None],[\"단위\",None],[\"비고\",None],[\"Description\",None]],[[\"항목\",\"면적\"],[\"산출수식 약자\",\"A\"],[\"수동 입력값\",None],[\"엑셀 적용여부\",None],[\"Parameter Type\",\"BP\"],[\"Parameter\",\"Area\"],[\"단위\",\"m2\"],[\"비고\",\"Revit자동산출\"],[\"Description\",None]],[[\"항목\",\"둘레\"],[\"산출수식 약자\",\"P\"],[\"수동 입력값\",None],[\"엑셀 적용여부\",None],[\"Parameter Type\",\"BP\"],[\"Parameter\",\"Perimeter\"],[\"단위\",\"mm\"],[\"비고\",\"Revit자동산출\"],[\"Description\",None]],[[\"항목\",\"Ceiling Height\"],[\"산출수식 약자\",\"CH\"],[\"수동 입력값\",None],[\"엑셀 적용여부\",None],[\"Parameter Type\",\"SP\"],[\"Parameter\",\"H_Room H or CH\"],[\"단위\",\"mm\"],[\"비고\",\"*Room Schedule에서 H or CH 수동 입력\"],[\"Description\",None]],[[\"항목\",\"▶ 수동 입력 값 (엑셀 상에서 입력)\"],[\"산출수식 약자\",None],[\"수동 입력값\",None],[\"엑셀 적용여부\",None],[\"Parameter Type\",None],[\"Parameter\",None],[\"단위\",None],[\"비고\",None],[\"Description\",None]],[[\"항목\",\"주 마감재 높이\"],[\"산출수식 약자\",\"MH\"],[\"수동 입력값\",2.1],[\"엑셀 적용여부\",\"O\"],[\"Parameter Type\",None],[\"Parameter\",None],[\"단위\",None],[\"비고\",None],[\"Description\",None]],[[\"항목\",\"Raised Floor 높이\"],[\"산출수식 약자\",\"RH\"],[\"수동 입력값\",1.0],[\"엑셀 적용여부\",\"O\"],[\"Parameter Type\",None],[\"Parameter\",None],[\"단위\",None],[\"비고\",None],[\"Description\",None]]]\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Parameter': 10,\n",
+       " \"Q'ty Cal Type Tag\": 2,\n",
+       " '항목': 4,\n",
+       " '수동 입력값': 6,\n",
+       " '구간판별': 1,\n",
+       " '비고': 12,\n",
+       " 'Category': 0,\n",
+       " '산출수식 약자': 5,\n",
+       " 'Description': 13,\n",
+       " '단위': 11,\n",
+       " '엑셀 적용여부': 8,\n",
+       " 'Parameter Type': 9,\n",
+       " 'DDD': 0}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdrs_withIdx = {\"Parameter\":10,\"Q'ty Cal Type Tag\":2,\"항목\":4,\"수동 입력값\":6,\"구간판별\":1,\"비고\":12,\"Category\":0,\"산출수식 약자\":5,\"Description\":13,\"단위\":11,\"엑셀 적용여부\":8,\"Parameter Type\":9}\n",
+    "hdrs_withIdx.update({\"DDD\":0})\n",
+    "hdrs_withIdx"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -808,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
