--- a/etc/_팀교육/프로그래밍 교육/dictionary.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# num1 += 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +43,7 @@
        " [-2.3, -0.7, -1.9, -1.2, 2.6, 1.4, 2.1, 0.4]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,182 +81,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'Clear_Wind_Flow': ['CNW', 'CNL'], 'Obstructed_Wind_Flow': ['CNW', 'CNL']},\n",
-       " {'windDir_0': {'Clear_Wind_Flow': ['CNW', 'CNL'],\n",
-       "   'Obstructed_Wind_Flow': ['CNW', 'CNL']},\n",
-       "  'windDir_180': {'Clear_Wind_Flow': ['CNW', 'CNL'],\n",
-       "   'Obstructed_Wind_Flow': ['CNW', 'CNL']}})"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hdrs_1 = [\"windDir_0\", \"windDir_180\"]\n",
-    "hdrs_2 = [\"Clear_Wind_Flow\", \"Obstructed_Wind_Flow\"]\n",
-    "hdrs_3 = [\"CNW\", \"CNL\",]\n",
-    "hdrs = [hdrs_1, hdrs_2, hdrs_3]\n",
-    "\n",
-    "h2_3 = dict.fromkeys(hdrs_2, hdrs_3)\n",
-    "hdrsDict = dict.fromkeys(hdrs_1, h2_3)\n",
-    "h2_3, hdrsDict\n",
-    "\n",
-    "#hdrs_3 * len(hdrs_2) * len(hdrs_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[('CNW', 1.2),\n",
-       "  ('CNL', 0.3),\n",
-       "  ('CNW', -0.5),\n",
-       "  ('CNL', -1.2),\n",
-       "  ('CNW', 1.2),\n",
-       "  ('CNL', 0.3),\n",
-       "  ('CNW', -0.5),\n",
-       "  ('CNL', -1.2)],\n",
-       " [('CNW', -1.1),\n",
-       "  ('CNL', -0.1),\n",
-       "  ('CNW', -1.1),\n",
-       "  ('CNL', -0.6),\n",
-       "  ('CNW', -1.1),\n",
-       "  ('CNL', -0.1),\n",
-       "  ('CNW', -1.1),\n",
-       "  ('CNL', -0.6)],\n",
-       " [('CNW', -0.6),\n",
-       "  ('CNL', -1.0),\n",
-       "  ('CNW', -1.0),\n",
-       "  ('CNL', -1.5),\n",
-       "  ('CNW', 0.9),\n",
-       "  ('CNL', 1.5),\n",
-       "  ('CNW', -0.2),\n",
-       "  ('CNL', -1.2)],\n",
-       " [('CNW', -1.4),\n",
-       "  ('CNL', 0.0),\n",
-       "  ('CNW', -1.7),\n",
-       "  ('CNL', -0.8),\n",
-       "  ('CNW', 1.6),\n",
-       "  ('CNL', 0.3),\n",
-       "  ('CNW', 0.8),\n",
-       "  ('CNL', -0.3)],\n",
-       " [('CNW', -0.9),\n",
-       "  ('CNL', -1.3),\n",
-       "  ('CNW', -1.1),\n",
-       "  ('CNL', -1.5),\n",
-       "  ('CNW', 1.3),\n",
-       "  ('CNL', 1.6),\n",
-       "  ('CNW', 0.4),\n",
-       "  ('CNL', -1.1)],\n",
-       " [('CNW', -1.9),\n",
-       "  ('CNL', 0.0),\n",
-       "  ('CNW', -2.1),\n",
-       "  ('CNL', -0.6),\n",
-       "  ('CNW', 1.8),\n",
-       "  ('CNL', 0.6),\n",
-       "  ('CNW', 1.2),\n",
-       "  ('CNL', -0.3)],\n",
-       " [('CNW', -1.5),\n",
-       "  ('CNL', -1.6),\n",
-       "  ('CNW', -1.5),\n",
-       "  ('CNL', -1.7),\n",
-       "  ('CNW', 1.7),\n",
-       "  ('CNL', 1.8),\n",
-       "  ('CNW', 0.5),\n",
-       "  ('CNL', -1.0)],\n",
-       " [('CNW', -2.4),\n",
-       "  ('CNL', -0.3),\n",
-       "  ('CNW', -2.3),\n",
-       "  ('CNL', -0.9),\n",
-       "  ('CNW', 2.2),\n",
-       "  ('CNL', 0.7),\n",
-       "  ('CNW', 1.3),\n",
-       "  ('CNL', 0.0)],\n",
-       " [('CNW', -1.8),\n",
-       "  ('CNL', -1.8),\n",
-       "  ('CNW', -1.5),\n",
-       "  ('CNL', -1.8),\n",
-       "  ('CNW', 2.1),\n",
-       "  ('CNL', 2.1),\n",
-       "  ('CNW', 0.6),\n",
-       "  ('CNL', -1.0)],\n",
-       " [('CNW', -2.5),\n",
-       "  ('CNL', -0.5),\n",
-       "  ('CNW', -2.3),\n",
-       "  ('CNL', -1.1),\n",
-       "  ('CNW', 2.6),\n",
-       "  ('CNL', 1.0),\n",
-       "  ('CNW', 1.6),\n",
-       "  ('CNL', 0.1)],\n",
-       " [('CNW', -1.8),\n",
-       "  ('CNL', -1.8),\n",
-       "  ('CNW', -1.5),\n",
-       "  ('CNL', -1.8),\n",
-       "  ('CNW', 2.1),\n",
-       "  ('CNL', 2.2),\n",
-       "  ('CNW', 0.7),\n",
-       "  ('CNL', -0.9)],\n",
-       " [('CNW', -2.4),\n",
-       "  ('CNL', -0.6),\n",
-       "  ('CNW', -2.2),\n",
-       "  ('CNL', -1.1),\n",
-       "  ('CNW', 2.7),\n",
-       "  ('CNL', 1.1),\n",
-       "  ('CNW', 1.9),\n",
-       "  ('CNL', 0.3)],\n",
-       " [('CNW', -1.6),\n",
-       "  ('CNL', -1.8),\n",
-       "  ('CNW', -1.3),\n",
-       "  ('CNL', -1.8),\n",
-       "  ('CNW', 2.2),\n",
-       "  ('CNL', 2.5),\n",
-       "  ('CNW', 0.8),\n",
-       "  ('CNL', -0.9)],\n",
-       " [('CNW', -2.3),\n",
-       "  ('CNL', -0.7),\n",
-       "  ('CNW', -1.9),\n",
-       "  ('CNL', -1.2),\n",
-       "  ('CNW', 2.6),\n",
-       "  ('CNL', 1.4),\n",
-       "  ('CNW', 2.1),\n",
-       "  ('CNL', 0.4)]]"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mk_dictWithHeaders(db, hdrs):\n",
-    "    h1, h2, h3 = hdrs\n",
-    "    h3cnt = len(h1) * len(h2)\n",
-    "    h3_act = h3 * len(hdrs_2) * len(hdrs_1)\n",
-    "    #row = DB[0]\n",
-    "    \n",
-    "    def mk_dict_oneRow(row):\n",
-    "        tgt = list(zip(h3_act, row))\n",
-    "        h3Dict = list(map(lambda x: dict([x]), tgt))\n",
-    "        h2_3 = list(map(lambda x: dict.fromkeys(h2, x), h3Dict))\n",
-    "        h1_2_3 = dict.fromkeys(h1, h2_3)\n",
-    "    \n",
-    "        return tgt\n",
-    "    dicts = list(map(mk_dict_oneRow, DB))\n",
+    "    h1, h2, h3, h4, h5 = hdrs\n",
     "\n",
-    "    return dicts\n",
-    "mk_dictWithHeaders(DB, hdrs)"
+    "    def dictionarize(iter, h3, step):\n",
+    "        pairs = list(map(lambda n: iter[n:n+2], range(len(iter)//step)))\n",
+    "        res = list(map(lambda pair: dict(list(zip(h3, pair))),pairs))\n",
+    "        return res\n",
+    "\n",
+    "    def dictLoop(db):\n",
+    "        res = []\n",
+    "        for row in db:\n",
+    "            tmp1 = dictionarize(row, h3,2)\n",
+    "            tmp2 = dictionarize(tmp1,h2,1)\n",
+    "            tmp3 = dictionarize(tmp2,h1,2)\n",
+    "            res.append(tmp3)\n",
+    "        return res\n",
+    "    table_ = dictLoop(db)\n",
+    "    res = dictionarize(table_,h4,1)\n",
+    "\n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdrs_1 = [\"WindDir_0\", \"WindDir_180\"]\n",
+    "hdrs_2 = [\"Clear_Wind_Flow\", \"Obstructed_Wind_Flow\"]\n",
+    "hdrs_3 = [\"CNW\", \"CNL\",]\n",
+    "hdrs_4 = [\"A\", \"B\"]\n",
+    "hdrs_5 = [0, 7.5, 15, 22.5, 30, 37.5, 45]\n",
+    "hdrs = [hdrs_1, hdrs_2, hdrs_3, hdrs_4, hdrs_5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'WindDir_0': {'Clear_Wind_Flow': {'CNW': 1.2, 'CNL': 0.3},\n",
+       "  'Obstructed_Wind_Flow': {'CNW': 0.3, 'CNL': -0.5}},\n",
+       " 'WindDir_180': {'Clear_Wind_Flow': {'CNW': 0.3, 'CNL': -0.5},\n",
+       "  'Obstructed_Wind_Flow': {'CNW': -0.5, 'CNL': -1.2}}}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "windTable = mk_dictWithHeaders(DB, hdrs)\n",
+    "windTable[0]['A'][0]\n",
+    "# windTable[0][0]['WindDir_0']['Clear_Wind_Flow']['CNW']\n"
    ]
   },
   {
@@ -267,20 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
