--- a/etc/_팀교육/프로그래밍 교육/etc.ipynb
+++ b/etc/_팀교육/프로그래밍 교육/etc.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################################Module For Functional Programing#############################################\n",
+    "################Module For Functional Programing##########################\n",
     "from functools import reduce\n",
     "from itertools import chain\n",
     "from itertools import groupby\n",
@@ -20,8 +20,9 @@
     "go = lambda *args: reduce(lambda a,f: f(a), args) ## 함수도 축약 가능 ##\n",
     "\n",
     "def dictUpdate(dic1,dic2):\n",
-    "    res = {**dic1,**dic2}\n",
-    "    return res\n",
+    "    res = dic1.update(dic2)\n",
+    "    #res = {**dic1,**dic2}\n",
+    "    return dic1 #res\n",
     "    \n",
     "def dictsMerge(dics):\n",
     "    res = reduce(dictUpdate, dics)\n",
@@ -31,16 +32,220 @@
     "    for k in keys:\n",
     "        del dic[k]\n",
     "    return dic\n",
-    "##############################################################################################################"
+    "##########################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import groupby"
+    "Sym_ValDict = {\n",
+    "    \"V\": 191.502,\n",
+    "    \"A\": 1276.68,\n",
+    "    \"P\": 155200,\n",
+    "    \"RE\": 0.12,\n",
+    "    \"WT\": 0.1    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('V', '191.502'), ('A', '1276.68'), ('P', '155200'), ('RE', '0.12'), ('WT', '0.1')]\n",
+      "[('RE', '0.12'), ('WT', '0.1'), ('V', '191.502'), ('A', '1276.68'), ('P', '155200')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = Sym_ValDict.keys()\n",
+    "vals = map(str, Sym_ValDict.values())\n",
+    "\n",
+    "symvals = list(zip(keys, vals))\n",
+    "print(symvals)\n",
+    "sortedSymVals = sorted(symvals, key=lambda x: len(x[0]), reverse=True)\n",
+    "print(sortedSymVals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "= 191.502*0.12\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "22.980240000000002"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strF = \"= V*RE\"\n",
+    "\n",
+    "for x in sortedSymVals:\n",
+    "    strF = strF.replace(*x)\n",
+    "\n",
+    "print(strF)\n",
+    "strF.strip('=')\n",
+    "eval(strF.strip('='))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 18, 19, 20, 21]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sheet = [\n",
+    "    [1,2,3,4,5],\n",
+    "    [1,2,3,4,5],\n",
+    "    [1,2,3,4,5],\n",
+    "    [1,2,3,4,5],\n",
+    "    [1,2,3,4,5],\n",
+    "]\n",
+    "rIDXs = list(range(17,21+1))\n",
+    "rIDXs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 'end']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "print(a)\n",
+    "\n",
+    "a[4]=\"end\"\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(17, [1, 2, 3, 4, 5]),\n",
+       " (18, [1, 2, 3, 4, 5]),\n",
+       " (19, [1, 2, 3, 4, 5]),\n",
+       " (20, [1, 2, 3, 4, 5]),\n",
+       " (21, [1, 2, 3, 4, 5])]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sheetWith_rIDX = list(zip(rIDXs, sheet))\n",
+    "sheetWith_rIDX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4, 5, 17],\n",
+       " [1, 2, 3, 4, 5, 18],\n",
+       " [1, 2, 3, 4, 5, 19],\n",
+       " [1, 2, 3, 4, 5, 20],\n",
+       " [1, 2, 3, 4, 5, 21]]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sheet_rIDX = list(map(lambda x: x[1] + [x[0]],sheetWith_rIDX))\n",
+    "sheet_rIDX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, *args = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = [1,2,3,4,5,6]\n",
+    "\n",
+    "tmp=[]\n",
+    "for i in result:\n",
+    "    if 2 < i <= 5:\n",
+    "        tmp.append(i)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "maximum = max(tmp)\n",
+    "minimum = min(tmp)\n",
+    "minimum"
    ]
   },
   {
